# mouse-cage-manager

./: README.md  index.html  mouse manager.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: macos-dmg.yml  windows-portable.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
